@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 25-08-2006 changed: skins are not reloaded unless needed when you log on / log off - allows for smoother transitions.
  - 25-08-2006 fixed: files (or folders) with 0 byte size would display as 0.1 Kb.
  - 25-08-2006 changed: treat a folder containing a VIDEO_TS.IFO file a complete dvd when stacking is enabled. you now don't need to enter folder and select video_ts.ifo to start it.
  - 25-08-2006 added: resume playback for dvd's and automatic bookmark for last played position
